checking if the actionListener was working

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,6 +127,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:onClick="onClick"
+
                 android:text="" />
 
             <TextView
@@ -135,6 +137,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:onClick="onClick"
+
                 android:text="" />
 
             <TextView
@@ -143,6 +147,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:onClick="onClick"
+
                 android:text="" />
 
             <TextView
