--- a/app/src/main/res/layout-v16/activity_main.xml
+++ b/app/src/main/res/layout-v16/activity_main.xml
@@ -117,6 +117,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:paddingBottom="50dp"
                 android:text="" />
 
@@ -126,6 +128,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -134,6 +138,9 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
+
                 android:text="" />
 
             <TextView
@@ -142,6 +149,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -150,6 +159,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -158,6 +169,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -166,6 +179,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
         </TableRow>
 
@@ -173,12 +188,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -187,6 +205,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -195,6 +215,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -203,6 +225,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -211,6 +235,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -219,6 +245,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -227,6 +255,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
         </TableRow>
 
@@ -240,6 +270,9 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
+
                 android:text="" />
 
             <TextView
@@ -248,6 +281,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -256,6 +291,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -264,6 +301,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -272,6 +311,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -280,6 +321,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -288,6 +331,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
         </TableRow>
 
@@ -301,6 +346,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -309,6 +356,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -317,6 +366,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -325,6 +376,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -333,6 +386,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -341,6 +396,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -349,6 +406,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
         </TableRow>
 
@@ -362,6 +421,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -370,6 +431,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -378,6 +441,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -386,6 +451,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -394,6 +461,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -402,6 +471,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
             <TextView
@@ -410,6 +481,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textview_border"
                 android:paddingBottom="50dp"
+                android:clickable="true"
+                android:onClick="onClick"
                 android:text="" />
 
         </TableRow>
