implemented buttons, implemented activity onDateSelection

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CalendarDaysCustomText" parent="android:TextAppearance.DeviceDefault.Medium">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="CalendarMonthCustomText" parent="android:TextAppearance.DeviceDefault.Large">
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
